--- a/lab-dean/src/styles/main.scss
+++ b/lab-dean/src/styles/main.scss
@@ -29,3 +29,45 @@ button {
   font-family: 'Optima', sans-serif;
   font-size: 15px;
 }
+
+ul {
+  list-style-type: none;
+}
+
+
+h2 {
+  text-align: center;
+  text-decoration: underline;
+}
+
+h3 {
+  text-align: center;
+}
+
+section.topic_data {
+  outline: 3px solid #FFFDFE;
+  text-align: center;
+  margin: 0 auto;
+}
+
+p {
+  text-decoration: underline;
+  text-align: center;
+}
+
+a {
+  color: #2A93E8;
+  text-decoration: none;
+  text-align: center;
+}
+
+input.input {
+  width: 150px;
+  height: 20px;
+  border: none;
+}
+
+input.number {
+  height: 20px;
+  border: none;
+}
